<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handler"
            type="com.plasticupdates.activity.LoginActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_back">
        <LinearLayout
            android:id="@+id/heading_title"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
          <ImageView
              android:layout_gravity="center"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/logo">
          </ImageView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnr_userpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_120"
            android:layout_below="@+id/heading_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/margin_10"
                android:singleLine="true"
                android:layout_marginLeft="@dimen/margin_25"
                android:layout_marginRight="@dimen/margin_25"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"

                android:textSize="15dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnr_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/lnr_userpass">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_10"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/margin_10"
                android:singleLine="true"
                android:layout_marginLeft="@dimen/margin_25"
                android:layout_marginRight="@dimen/margin_25"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:textSize="15dp"
                android:drawablePadding="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/light_main"
                android:textSize="@dimen/text_15"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/margin_25"
                android:visibility="visible" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/lnr_pass">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_55"
                android:textSize="@dimen/margin_15"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/blue_round_corner"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_25"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_25"
                ></androidx.appcompat.widget.AppCompatButton>
            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/newuser"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_15"
                android:visibility="visible" />
        </LinearLayout>


    </RelativeLayout>

</layout>