<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ChangePasswordActivity">
        <RelativeLayout
            android:id="@+id/rr_banner"
            android:layout_width="match_parent"
            android:background="@color/light_main"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/imgback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:padding="@dimen/margin_8"
                android:visibility="visible" />
            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chpassword"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/imgback"
                android:textSize="@dimen/text_18" />

        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/rr_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="30dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/npassword"
                        android:inputType="textPassword"
                        android:paddingHorizontal="10dp"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/light_main" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/cnpassword"
                        android:inputType="textPassword"
                        android:paddingHorizontal="10dp"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/light_main" />

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_55"
                android:textSize="@dimen/margin_15"
                android:text="Change"
                android:textColor="@color/white"
                android:background="@drawable/blue_round_corner"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_25"
                android:layout_marginRight="@dimen/margin_25"
                ></androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>

    </RelativeLayout>
</layout>