<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handler"
            type="com.plasticupdates.MainActivity" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/home_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_back"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_15"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:background="@drawable/ic_baseline_segment_24">

                </ImageView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_5"
                    android:padding="@dimen/margin_15"
                    android:background="@drawable/ic_baseline_notifications_24">
                </ImageView>
            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerMain"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/light_main"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global_news"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_toRightOf="@+id/imgback"
                android:textSize="@dimen/text_18" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_bottom"
                >
                <ImageView
                    android:id="@+id/img_global"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:background="@drawable/globalnews">
                </ImageView>

            </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breaking_news"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_toRightOf="@+id/imgback"
                android:textSize="@dimen/text_18" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/packet_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical" />
            </androidx.cardview.widget.CardView>
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom"
                android:layout_marginTop="@dimen/margin_5"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:background="@drawable/breaking_news">
                </ImageView>
                <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:background="@drawable/breaking_news">
            </ImageView>
            </LinearLayout>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/services"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/imgback"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text_18" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_5"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:background="@drawable/services">
                </ImageView>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:background="@drawable/services">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_5"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Prices"
                    android:textColor="@color/red"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:background="@color/light_red"
                    android:layout_toRightOf="@+id/imgback"
                    android:textSize="@dimen/text_18" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"
                    android:textColor="@color/red"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="@dimen/margin_180"
                    android:background="@color/light_red"
                    android:layout_toRightOf="@+id/imgback"
                    android:textSize="@dimen/text_18" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_toRightOf="@+id/imgback"
                android:textSize="@dimen/text_18" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom"
                android:layout_marginTop="@dimen/margin_5"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:background="@drawable/events">
                </ImageView>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:background="@drawable/events">
                </ImageView>
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">
            <include layout="@layout/nav_layout" />
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>